# Trail-Mate-AI-Agent

./: .cursorrules  Agent_Input.py  README.md  Research_dest.py  pyproject.toml  requirements.txt  supervisor_agent.py
frontend/: REACT_FRONTEND_PROMPT.md  README.md  vercel.json
frontend/trail-mate/: CHAT_SETUP.md  env.example  package-lock.json  package.json  test-api.js  test-response-handling.js
frontend/trail-mate/src/: App.tsx  theme.ts
frontend/trail-mate/src/components/common/: CostBreakdownTable.tsx  ErrorBoundary.tsx  Footer.tsx  Navbar.tsx
frontend/trail-mate/src/pages/: Accommodations.tsx  Activities.tsx  Budget.tsx  Chat.tsx  Home.tsx  Itinerary.tsx  Profile.tsx
frontend/trail-mate/src/services/: api.ts
frontend/trail-mate/src/types/: accommodation.ts  activity.ts  budget.ts  index.ts  itinerary.ts
